src/FinancialForce Accounting/objects/codaPaymentBatch__c.object
<CustomObject>
    <customHelpPage>codahelppayment</customHelpPage>
    <description>Holds information about different batches generated as part of a payment process.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payment Batches</relationshipLabel>
        <relationshipName>PaymentBatches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ErrorDescription__c</fullName>
        <label>Error Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HasErrors__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Errors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LineNumber__c</fullName>
        <label>Line Number</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PaymentMediaSummary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Media Summary</label>
        <referenceTo>codaPaymentMediaSummary__c</referenceTo>
        <relationshipLabel>Payment Batches</relationshipLabel>
        <relationshipName>PaymentBatches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentReference__c</fullName>
        <label>Payment Reference</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentSaveBatch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Save Batch</label>
        <referenceTo>codaPaymentBatch__c</referenceTo>
        <relationshipLabel>Payment Batches</relationshipLabel>
        <relationshipName>PaymentBatches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentSummary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Summary</label>
        <referenceTo>codaPaymentAccountLineItem__c</referenceTo>
        <relationshipLabel>Payment Batches</relationshipLabel>
        <relationshipName>PaymentBatches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentValue__c</fullName>
        <label>Payment Value</label>
        <summarizedField>codaPaymentBatchLineItem__c.TransactionValue__c</summarizedField>
        <summaryFilterItems>
            <field>codaPaymentBatchLineItem__c.Selected__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>codaPaymentBatchLineItem__c.PaymentBatch__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <label>Payment</label>
        <referenceTo>codaPayment__c</referenceTo>
        <relationshipLabel>Payment Batches</relationshipLabel>
        <relationshipName>PaymentBatches</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Selected__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Save</fullName>
                </value>
                <value>
                    <fullName>Post And Match</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Payment Batch</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PBA{000000}</displayFormat>
        <label>Payment Batch Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Batches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>